# dog-tricks-api-testing

./: Cargo.toml  README.md
src/: lib.rs  main.rs  trick_handlers.rs  trick_models.rs  trick_router.rs  trick_service.rs
tests/: trick_handlers_tests.rs
