[package]
name = "dog-tricks-api-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper="1.8.1"
tower = "0.5.2"
serde_json = "1.0.145"
